file(GLOB ELN_SOURCE 
	sca_eln_c.cpp
	sca_eln_ccc.cpp
	sca_eln_cccs.cpp
	sca_eln_ccl.cpp
	sca_eln_ccr.cpp
	sca_eln_ccvs.cpp
	sca_eln_gyrator.cpp
	sca_eln_ideal_transformer.cpp
	sca_eln_isource.cpp
	sca_eln_l.cpp
	sca_eln_module.cpp
	sca_eln_node_ref.cpp
	sca_eln_node.cpp
	sca_eln_nullor.cpp
	sca_eln_r.cpp
	sca_eln_sc_c.cpp
	sca_eln_sc_isink.cpp
	sca_eln_sc_isource.cpp
	sca_eln_sc_l.cpp
	sca_eln_sc_r.cpp
	sca_eln_sc_rswitch.cpp
	sca_eln_sc_vsink.cpp
	sca_eln_sc_vsource.cpp
	sca_eln_tdf_c.cpp
	sca_eln_tdf_isink.cpp
	sca_eln_tdf_isource.cpp
	sca_eln_tdf_l.cpp
	sca_eln_tdf_r.cpp
	sca_eln_tdf_rswitch.cpp
	sca_eln_tdf_vsink.cpp
	sca_eln_tdf_vsource.cpp
	sca_eln_terminal.cpp
	sca_eln_transmission_line.cpp
    sca_eln_vcc.cpp
	sca_eln_vccs.cpp
	sca_eln_vcl.cpp
	sca_eln_vcr.cpp
	sca_eln_vcvs.cpp
	sca_eln_view.cpp
	sca_eln_vsource.cpp)

add_library(eln STATIC ${ELN_SOURCE})